--- a/WebApplication2/Views/Admin/Report.cshtml
+++ b/WebApplication2/Views/Admin/Report.cshtml
@@ -181,7 +181,7 @@
                     </li>
                 }
                 <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
-                    <a class="page-link" asp-action="report" asp-route-pageNumber="@(Model.PageIndex + 1)">Next</a>
+                    <a class="page-link" asp-action="report" asp-route-pageNumber="@(Model.PageIndex + 1)"> </a>
                 </li>
             </ul>
         </nav>
