--- a/WebApplication2/Views/Shared/_Layout.cshtml.css
+++ b/WebApplication2/Views/Shared/_Layout.cshtml.css
@@ -39,10 +39,16 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+.footer_area section_gap_top {
+    background-attachment: fixed;
+    background-color: #000;
 }
+.footer {
+   
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
+}
+
