--- a/WebApplication2/wwwroot/css/site.css
+++ b/WebApplication2/wwwroot/css/site.css
@@ -892,7 +892,8 @@ footer {
     line-height: 42px;
     border: 1px solid #eee;
     border-radius: 0px;
-    margin-bottom: 30px;
+    margin-bottom: 0 !important;
+    margin-top:30px !important;
 }
 
 .contact-form ul {
